# todo-rs

./: Cargo.toml  README.md  diesel.toml
migrations/2024-08-02-212938_create_todos_table/: up.sql
src/: handlers.rs  main.rs  models.rs  schema.rs
